5290. Fix Searchfield Icon is not properly aligned in Firefox

--- a/src/components/searchfield/_searchfield-new.scss
+++ b/src/components/searchfield/_searchfield-new.scss
@@ -123,7 +123,7 @@ html.is-firefox {
       }
 
       .icon:not(.close) {
-        top: 12px;
+        top: 8px;
       }
 
       .icon.close {
@@ -132,7 +132,7 @@ html.is-firefox {
     }
 
     > .icon {
-      top: 12px;
+      top: 10px;
     }
 
     &.is-open,
